# oxoria

./: .gitignore  pyproject.toml  ui_core.py
src/myref/: __main__.py
src/myref/search/: db_operate.py  langugae_processing_variables.py  use_vector.py
src/myref/ui/: main_ui.py  ui_var.py
src/myref/ui/canvas_area/: canvas.py  graphics_item.py  resize_handle.py
src/myref/ui/search_area/: side_panel.py
src/myref/ui/ux_widgets/: splitter.py  status_bar.py
src/oxoria/: __main__.py  global_var.py
src/oxoria/cmd/: resources_api.py  search_api.py
src/oxoria/graphics/img/: image_hash.py
src/oxoria/search/: db_operate.py  langugae_processing_variables.py  quantumize.py  test_model.py  use_vector.py
src/oxoria/ui/: main_ui.py  ui_var.py
src/oxoria/ui/canvas_area/: canvas.py  graphics_item.py  resize_handle.py
src/oxoria/ui/initial/: initialise_ui.py
src/oxoria/ui/outline/: menu_bar.py
src/oxoria/ui/resources_lib/: registering_dialog.py  side_panel.py
src/oxoria/ui/search_area/: side_panel.py
src/oxoria/ui/ux_widgets/: splitter.py
